# chess

./: .gitignore  README.md
chess-qt-client/: .gitignore  CMakeLists.txt
chess-qt-client/resources/: main.qrc
chess-qt-client/src/: BlackDecorator.cpp  BlackDecorator.h  ChessBoard.cpp  ChessBoard.h  GameObject.cpp  GameObject.h  MemoryStream.cpp  MemoryStream.h  NetworkManager.cpp  NetworkManager.h  Registry.cpp  Registry.h  WhiteDecorator.cpp  WhiteDecorator.h  main.cpp
chess-qt-client/src/figures/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
chess-qt-client/tests/: CMakeLists.txt  MemoryStreamTest.cpp
chess-server/: .gitignore  CMakeLists.txt  server
chess-server/include/: Socket.h  types.h
chess-server/src/: Socket.cpp  main.cpp
chess-server/tests/: CMakeLists.txt  SocketTest.cpp  tests  tests.cpp
doc/: protocol.txt
