CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (chess-client)

SET (CMAKE_AUTOMOC ON)
SET (CMAKE_AUTOUIC ON)
SET (CMAKE_AUTORCC ON)
SET (CMAKE_CXX_STANDARD 11)

SET (SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET (INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
SET (RESOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/resources)

SET (SOURCES
        ${SRC_DIR}/main.cpp
        ${SRC_DIR}/ChessBoard.cpp)

SET (RESOURCES
        ${RESOURCE_DIR}/main.qrc)

INCLUDE_DIRECTORIES (${INCLUDE_DIR} .)

FIND_PACKAGE (Qt5 COMPONENTS Widgets)

ADD_EXECUTABLE (chess-client WIN32 ${SOURCES} ${HEADERS} ${RESOURCES})
TARGET_LINK_LIBRARIES (chess-client Qt5::Widgets)
