CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (chess-server)

SET (CMAKE_CXX_STANDARD 11)
SET (SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET (INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

SET (SOURCES
        ${SRC_DIR}/main.cpp
        ${SRC_DIR}/Socket.cpp)

SET (HEADERS
        ${INCLUDE_DIR}/Socket.h)

INCLUDE_DIRECTORIES (${INCLUDE_DIR})

IF (WIN32)
    SET (LIBRARIES ws2_32)
ELSE ()
    SET (LIBRARIES pthread)
ENDIF ()

ADD_EXECUTABLE (chess-server ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES (chess-server ${LIBRARIES})
