CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (tests)

STRING (REGEX REPLACE "/MDd" "/MTd" CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG})
SET (MAIN_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../src)
SET (MAIN_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../include)
SET (SOURCES
        tests.cpp
        SocketTest.cpp
        ${MAIN_SRC_DIR}/Socket.cpp)

INCLUDE_DIRECTORIES (${MAIN_INCLUDE_DIR} .)

IF (WIN32)
    SET (LIBRARIES ws2_32)
ENDIF ()

ADD_SUBDIRECTORY (../../thirdparty/googletest ${CMAKE_CURRENT_BINARY_DIR}/thirdparty/googletest)
ADD_EXECUTABLE (tests ${SOURCES})
TARGET_LINK_LIBRARIES (tests gtest ${LIBRARIES})
